WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281743
[scroll-animations] WPT test `scroll-animations/scroll-timelines/two-animations-attach-to-same-scroll-timeline-cancel-one.html` is a crash
https://bugs.webkit.org/show_bug.cgi?id=281743
Summary
[scroll-animations] WPT test `scroll-animations/scroll-timelines/two-animatio...
Antoine Quint
Reported
2024-10-18 04:57:41 PDT
The WPT test `scroll-animations/scroll-timelines/two-animations-attach-to-same-scroll-timeline-cancel-one.html` crashes.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-18 04:57:54 PDT
<
rdar://problem/138179126
>
Antoine Quint
Comment 2
2024-10-18 05:00:28 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35426
EWS
Comment 3
2024-10-18 06:51:05 PDT
Committed
285397@main
(fc488b0c2b59): <
https://commits.webkit.org/285397@main
> Reviewed commits have been landed. Closing PR #35426 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug