[scroll-animations] WPT test `scroll-animations/scroll-timelines/two-animations-attach-to-same-scroll-timeline-cancel-one.html` is a crash https://bugs.webkit.org/show_bug.cgi?id=281743 rdar://138179126

Reviewed by Anne van Kesteren.

The `KeyframeEffect::computeExtentOfTransformAnimation()` method called from `Styleable::computeAnimationExtent()`
asserts that its computed keyframes animate the `transform` property. However, the caller does not look at an effect's
computed keyframes, but rather asks whether in general that effect animates `transform`, which may return `true` if
computed keyframes have not been set up yet and we've only got the data provided by the API. So we now reconcile those
two methods by only ever looking at the computed keyframes, aka "blending" keyframes.

* LayoutTests/TestExpectations:
* Source/WebCore/style/Styleable.cpp:
(WebCore::Styleable::computeAnimationExtent const):

Canonical link: https://commits.webkit.org/285397@main